[package]
name = "openshift-sample-go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.7"
hyper = {version = "0.14.16", features = ["full"]}
tokio = {version = "1.16.1", features = ["full"]}
